# licensit

./: Cargo.toml  README.md
.github/workflows/: publish_crates.yml  release_github.yml
data/: licenses.yml
data/licenses/: licenses.yml
src/: cli.rs  core.rs  license_renderers.rs  main.rs  util.rs
tests/: completions.rs  integration_tests.rs
