[package]
name = "licensit"
version = "1.0.0"
authors = ["neuromeow <neuromeowhouse@gmail.com>"]
rust-version = "1.70.0"
edition = "2021"
description = "Command line tool to create LICENSE files"
readme = "README.md"
homepage = "https://github.com/neuromeow/licensit"
repository = "https://github.com/neuromeow/licensit"
license = "MIT"
keywords = ["cli", "license-management"]
categories = ["command-line-utilities"]

[dependencies]
assert_cmd = "2.0.12"
clap = { version = "4.4.6", features = ["derive"] }
chrono = "0.4.31"
colored = "2.0.0"
configparser = "3.0.2"
include_dir = "0.7.3"
serde = { version = "1.0.0", features = ["derive"] }
serde_yaml = "0.9"
serial_test = "2.0.0"
whoami = "1.4.1"
