[package]
name = "licensit"
version = "1.2.0"
authors = ["neuromeow <neuromeowhouse@gmail.com>"]
rust-version = "1.74.1"
edition = "2021"
description = "Command-line tool to create LICENSE files"
readme = "README.md"
homepage = "https://github.com/neuromeow/licensit"
repository = "https://github.com/neuromeow/licensit"
license = "MIT"
keywords = ["cli", "license-management"]
categories = ["command-line-utilities"]

[dependencies]
assert_cmd = "2.0.14"
clap = { version = "4.5.2", features = ["derive"] }
chrono = "0.4.35"
colored = "2.1.0"
configparser = "3.0.4"
include_dir = "0.7.3"
serde = { version = "1.0.0", features = ["derive"] }
serde_yaml = "0.9"
serial_test = "3.0.0"
tempfile = "3.10.1"
whoami = "1.5.1"
