[package]
name = "licensit"
version = "1.2.0"
authors = ["neuromeow <neuromeowhouse@gmail.com>"]
rust-version = "1.74.1"
edition = "2021"
description = "Command-line tool to create LICENSE files"
readme = "README.md"
homepage = "https://github.com/neuromeow/licensit"
repository = "https://github.com/neuromeow/licensit"
license = "MIT"
keywords = ["cli", "license-management"]
categories = ["command-line-utilities"]

[dependencies]
assert_cmd = "2.0.16"
clap = { version = "4.5.16", features = ["derive"] }
chrono = "0.4.38"
colored = "2.1.0"
configparser = "3.1.0"
include_dir = "0.7.4"
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.33"
serial_test = "3.1.1"
tempfile = "3.12.0"
whoami = "1.5.1"
